--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -66,9 +66,9 @@ body {
   margin-block: 0 var(--h4-margin);
 }
 
-p.body:last-child {
+/* p.body:last-child {
   margin-block: 0;
-}
+} */
 
 .body {
   font-size: var(--body-font-size);
